# selfspy3

./: .coverage  .gitignore  .zsh_history__Users_nuin_Projects_selfspy3  CLAUDE.md  Readme.md  dev  install.py  pyproject.toml  repomix-output.txt  requirements-macos.txt  requirements.txt
SelfspyWidgets/: ActivitySummaryWidget.h  ActivitySummaryWidget.m  ModernActivityWidget.h  ModernActivityWidget.m  ModernSelfspyApp.h  ModernSelfspyApp.m  ModernSelfspyWidget.h  ModernSelfspyWidget.m  ModernTerminalWidget.h  ModernTerminalWidget.m  README.md  SelfspyWidget.h  SelfspyWidget.m  SelfspyWidgetApp.h  SelfspyWidgetApp.m  SelfspyWidgets  SimpleModernActivityWidget.h  SimpleModernActivityWidget.m  TerminalWidget.h  TerminalWidget.m  TopAppsWidget.h  TopAppsWidget.m  build.sh  create_app_bundle.sh  main.m  modern_main.m
SelfspyWidgets/SelfspyWidgets.app/Contents/: Info.plist
crystal/: README.md  shard.yml
crystal/src/: config.cr  monitor.cr  platform.cr  selfspy.cr  selfstats.cr  selfviz.cr  storage.cr
dart/: pubspec.yaml
desktop-app/: README.md  selfspy_desktop.py  simple_widget.py  widget_config.py
docs/: ADVANCED_GUIDE.md  INSTALL.md  README.md
docs/development/: IMPROVED_STRUCTURE.md  PROJECT_STRUCTURE.md
docs/installation/: README.md
elixir/: README.md
elixir/assets/js/: hooks.js
elixir/c_src/: Makefile  darwin_monitor.c  darwin_monitor.h  platform_monitor_nif.c
elixir/lib/: selfspy_web.ex
elixir/lib/selfspy_web/: application.ex  config.ex
elixir/lib/selfspy_web/monitor/: keyboard_monitor.ex  mouse_monitor.ex  terminal_monitor.ex  window_monitor.ex
elixir/lib/selfspy_web/nif/: platform_monitor.ex
elixir/lib/selfspy_web_web/: gettext.ex  router.ex  telemetry.ex
elixir/lib/selfspy_web_web/components/: core_components.ex
elixir/lib/selfspy_web_web/components/layouts/: root.html.heex
elixir/lib/selfspy_web_web/controllers/: error_html.ex  page_controller.ex  page_html.ex
elixir/lib/selfspy_web_web/live/: dashboard_live.ex  settings_live.ex
elixir/priv/repo/migrations/: 20250812_create_activity_tables.exs
elixir/priv/static/assets/js/: app.js
elixir/test/: test_helper.exs
elixir/test/selfspy_web_web/controllers/: error_json_test.exs
elixir/test/support/: conn_case.ex  data_case.ex
fsharp/: CLI.fs  Config.fs  Monitor.fs  Platform.fs  Program.fs  Selfspy.fsproj  Stats.fs  Storage.fs  Types.fs
gleam/: gleam.toml
gleam/src/: selfspy.gleam
go/: README.md  go.mod
go/cmd/selfspy/: main.go
go/internal/config/: config.go
go/internal/platform/: darwin.go  linux.go  platform.go  windows.go
go/internal/types/: types.go
grain/: grain.gr
haskell/: selfspy.cabal
haskell/app/: Main.hs
inko/: inko.pkg  selfspy.inko
janet/: project.janet  selfspy.janet
koka/: kkconfig.json  selfspy.kk
kotlin/: README.md  build.gradle.kts  gradle.properties  gradlew
kotlin/src/main/resources/: logback.xml
lobster/: README.md  selfspy.lobster
nim/: README.md  selfspy.nimble
nim/src/: config.nim  encryption.nim  monitor.nim  platform.nim  selfspy.nim  storage.nim
nim/src/platform/: macos.nim
objective-c/: Makefile  README.md
objective-c/SelfspyWidgets/: ModernSelfspyWidgets
objective-c/SelfspyWidgets/SelfspyWidgets.app/Contents/MacOS/: SelfspyWidgets
ocaml/: dune-project
ocaml/lib/: dune  selfspy.ml
odin/: build.sh  selfspy.odin
pony/: corral.json  selfspy.pony
python/: README.md  pytest.ini  requirements-dev.txt
python/desktop-app/: README.md  USAGE.md  data_integration.py  launch_widgets.py  requirements.txt  selfspy_desktop_advanced.py  widget_types.py
python/src/: activity_monitor.py  cli.py  encryption.py  password_dialog.py  permissions.py  schemas.py  terminal_stats.py  terminal_tracker.py
python/src/platform/: __init__.py  base.py  darwin.py
python/tests/: conftest.py  test_models.py
red/: selfspy.red
rescript/: package.json  rescript.json
rescript/src/: Selfspy.res
roc/: main.roc
rust/: Cargo.toml  README.md
rust/selfspy-core/: Cargo.toml
rust/selfspy-core/src/: config.rs  db.rs  lib.rs  models.rs
rust/selfspy-gui/: Cargo.toml
rust/selfspy-gui/src/: charts.rs  main.rs  settings.rs  system_tray.rs
rust/selfspy-monitor/: Cargo.toml
rust/selfspy-monitor/src/: main.rs
rust/selfspy-rs/: Cargo.toml
rust/selfspy-stats/src/: main.rs  viz.rs
selfspy-phoenix/: README.md
selfspy-phoenix/selfspy_web/: .gitignore  README.md  mix.exs
selfspy-phoenix/selfspy_web/assets/: package-lock.json
selfspy-phoenix/selfspy_web/assets/css/: app.css
selfspy-phoenix/selfspy_web/assets/js/: app.js
selfspy-phoenix/selfspy_web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
selfspy-phoenix/selfspy_web/lib/: selfspy_web_web.ex
selfspy-phoenix/selfspy_web/lib/selfspy_web/: application.ex  mailer.ex  repo.ex
selfspy-phoenix/selfspy_web/lib/selfspy_web/monitor/: activity_monitor.ex
selfspy-phoenix/selfspy_web/lib/selfspy_web/schemas/: activity.ex
selfspy-phoenix/selfspy_web/lib/selfspy_web_web/: endpoint.ex  router.ex
selfspy-phoenix/selfspy_web/lib/selfspy_web_web/components/: layouts.ex
selfspy-rs/: Cargo.toml  README.md
selfspy-rs/selfspy-core/src/: encryption.rs  monitor.rs
selfspy-rs/selfspy-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
selfspy-rs/selfspy-gui/: README.md
selfspy-rs/selfspy-gui/src/: app.rs  dashboard.rs  statistics.rs
selfspy-rs/selfspy-stats/: Cargo.toml
shared/scripts/: build-all-new.sh  build-all.sh  run-tests-new.sh  run-tests.sh  setup-dev-env-new.sh  setup-dev-env.sh
src/: .zsh_history__Users_nuin_Projects_selfspy3_src  __init__.py  activity_monitor.py  activity_store.py  check_password.py  cli.py  config.py  encryption.py  enhanced_stats.py  models.py  password_dialog.py  schemas.py  selfspy.py  selfviz.py  stats.py  terminal_stats.py  terminal_tracker.py
src/platform/: __init__.py  base.py  darwin.py  darwin_input.py  fallback.py  input_tracker.py  permissions.py  screen_capture.py
tests/: conftest.py  test_models.py
v/: selfspy.v  v.mod
zig/: README.md  build.zig
zig/src/: main.zig
(+1004 files in other folders)
