cabal-version: 3.0
name: selfspy
version: 1.0.0
synopsis: Modern activity monitoring in Haskell - functional, elegant, powerful
description: 
    Functional programming approach to activity monitoring with strong typing,
    immutable data structures, and elegant concurrent processing.
    
homepage: https://github.com/selfspy/selfspy3
license: MIT
license-file: ../LICENSE
author: Selfspy Team
maintainer: team@selfspy.dev
category: System
build-type: Simple
extra-source-files: README.md

library
    exposed-modules:
        Selfspy.Core
        Selfspy.Config
        Selfspy.Monitor
        Selfspy.Storage
        Selfspy.Platform
        Selfspy.Types
        Selfspy.Encryption
        Selfspy.Stats
    
    other-modules:
        Selfspy.Platform.Darwin
        Selfspy.Platform.Linux
        Selfspy.Platform.Windows
    
    build-depends:
        base >= 4.16 && < 5,
        aeson >= 2.0,
        bytestring >= 0.11,
        text >= 1.2,
        time >= 1.12,
        containers >= 0.6,
        mtl >= 2.2,
        stm >= 2.5,
        async >= 2.2,
        sqlite-simple >= 0.4,
        yaml >= 0.11,
        optparse-applicative >= 0.17,
        cryptonite >= 0.30,
        memory >= 0.18,
        unix >= 2.7,
        directory >= 1.3,
        filepath >= 1.4,
        process >= 1.6
    
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
        RecordWildCards
        LambdaCase
        TypeApplications
        ScopedTypeVariables
        BangPatterns
        StrictData
        NoImplicitPrelude
    
    ghc-options: -Wall -Wcompat -O2 -threaded

executable selfspy
    main-is: Main.hs
    build-depends:
        base,
        selfspy
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        NoImplicitPrelude
    ghc-options: -Wall -Wcompat -O2 -threaded -rtsopts -with-rtsopts=-N

executable selfstats
    main-is: Stats.hs
    build-depends:
        base,
        selfspy
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        NoImplicitPrelude
    ghc-options: -Wall -Wcompat -O2 -threaded -rtsopts -with-rtsopts=-N

test-suite selfspy-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Test.Selfspy.Config
        Test.Selfspy.Types
        Test.Selfspy.Storage
    build-depends:
        base,
        selfspy,
        hspec >= 2.9,
        QuickCheck >= 2.14,
        temporary >= 1.3
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        NoImplicitPrelude
    ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N