[workspace]
resolver = "2"
members = ["selfspy-core", "selfspy-monitor", "selfspy-stats", "selfspy-gui"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["nuin <nuin@genedrift.org>"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
ratatui = "0.28"
crossterm = "0.28"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
once_cell = "1.20"
comfy-table = "7.1"
indicatif = "0.17"
eframe = "0.28"
egui = "0.28"
egui_plot = "0.28"
emath = "0.28"
epaint = "0.28"
image = "0.25"
tray-icon = "0.17"
winit = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true