[package]
name = "selfspy-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "selfspy-gui"
path = "src/main.rs"

[dependencies]
selfspy-core = { path = "../selfspy-core" }
tokio = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
emath = { workspace = true }
epaint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
image = { workspace = true }
tray-icon = { workspace = true }
winit = { workspace = true }

[features]
default = ["persistence"]
persistence = ["eframe/persistence"]