[workspace]
resolver = "2"
members = ["selfspy-core", "selfspy-monitor", "selfspy-stats"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["nuin <nuin@genedrift.org>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/nuin/selfspy3"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
ratatui = "0.28"
crossterm = "0.28"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
once_cell = "1.20"
comfy-table = "7.1"
indicatif = "0.17"

# Platform-specific dependencies (conditionally included in member crates)
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
x11 = "2.21"
xcb = "1.4"
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true